# FC-DipLoaf

./: .gitignore  .gitmodules  CMakeLists.txt  FC-DipLoaf.sln  README.md  calibrate_front_color.bat  calibrate_omni_color.bat  send_alive.sh
Calibrator/: AutoCalibrator.cpp  Calibrator.vcxproj  Calibrator.vcxproj.filters  ColorCalibrator.cpp  ColorCalibrator.h  DistanceCalibrator.cpp  DistanceCalibrator.h  packages.config
ColorCalibrator/: AutoCalibrator.cpp  AutoCalibrator.h  ColorCalibrator.cpp  ColorCalibrator.h  ColorCalibrator.vcxproj  ColorCalibrator.vcxproj.filters  ReadMe.txt  packages.config  stdafx.cpp
CommonModule/: CalibrationConfReader.h  CommonModule.vcxproj  CommonModule.vcxproj.filters  ConfigurableModule.cpp  ConfigurableModule.h  DistanceCalculator.cpp  DistanceCalculator.h  FieldState.cpp  FieldState.h  GameState.h  Interfaces.h  ReadMe.txt  RobotState.cpp  RobotState.h  Settings.cpp  Settings.h  ThreadedClass.cpp  ThreadedClass.h  Types.h  UdpServer.cpp  UdpServer.h  WheelConfig.cpp  packages.config
DisplayModule/: Dialog.cpp  Dialog.h  DisplayModule.vcxproj  DisplayModule.vcxproj.filters  ReadMe.txt
DistanceCalibrator/: DistanceCalibrator.cpp  DistanceCalibrator.h  DistanceCalibrator.vcxproj  DistanceCalibrator.vcxproj.filters  ReadMe.txt  packages.config  resource.h  stdafx.cpp
HardwareModule/: Camera.cpp  Camera.h  CoilBoard.cpp  CoilBoard.h  ComModule.cpp  ComModule.h  HardwareInterfaces.h  HardwareModule.vcxproj  HardwareModule.vcxproj.filters  ReadMe.txt  SerialToUdp.cpp  SerialToUdp.h  SimpleSerial.h  WheelController.cpp  WheelController.h  refereeCom.cpp  refereeCom.h
Helpers/: Helpers.vcxproj  Helpers.vcxproj.filters  ReadMe.txt
OmniCalibration/: OmniCalibration.cpp  OmniCalibration.vcxproj  OmniCalibration.vcxproj.filters  ReadMe.txt  stdafx.cpp
PredictionModule/: BallLocations.cpp  BallLocations.h  BallPosition.cpp  FieldStatePredictor.cpp  FieldStatePredictor.h  KalmanFilter.cpp  KalmanFilter.h  PredictionModule.vcxproj  PredictionModule.vcxproj.filters  ReadMe.txt  RobotLocation.cpp  RobotLocation.h  RobotPosition.cpp  RobotPosition.h  RobotTracker.cpp  RobotTracker.h  TargetPosition.cpp  kdNode2D.cpp  kdNode2D.h
RobotModule/: IdlePlay.cpp  IdleStateMachine.h  ManualControl.cpp  ManualControl.h  ReadMe.txt  Robot.cpp  Robot.h  RobotModule.vcxproj  RobotModule.vcxproj.filters
Robotiina/: ReadMe.txt  Robotiina.cpp  Robotiina.vcxproj  Robotiina.vcxproj.filters  packages.config  stdafx.h
Simulator/: Simulator.cpp  Simulator.h  Simulator.vcxproj  Simulator.vcxproj.filters  packages.config
StateMachine/: DriveInstruction.cpp  DriveInstruction.h  MultiModePlay.cpp  MultiModePlay.h  ReadMe.txt  SingleModePlay.cpp  SingleModePlay.h  StateMachine.cpp  StateMachine.h  StateMachine.vcxproj  StateMachine.vcxproj.filters
VisionModule/: BallFinder.cpp  BallFinder.h  BallLocations.cpp  BallPosition.cpp  BallPosition.h  DummyVision.cpp  DummyVision.h  FrontCameraVision.cpp  FrontCameraVision.h  GateFinder.cpp  GatePosition.cpp  GatePosition.h  ImageThresholder.cpp  ImageThresholder.h  MainCameraVision.cpp  MainCameraVision.h  ObjectFinder.cpp  ObjectFinder.h  ReadMe.txt  (+14 more)
(+6 files in other folders)
